--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.9.0",
+    "react-spinners": "^0.15.0",
     "react-tabs": "^6.1.0",
     "react-use-websocket": "^4.11.1",
     "typescript": "^3.2.1",
