--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.7.9",
     "lightweight-charts": "^4.1.6",
     "react": "^18.3.1",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
